[build-system]
requires = ["setuptools>=42", "wheel", "httpx>=0.20.0", "pandas>=1.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rquote"
version = "0.4.6"
description = "Mostly day quotes of cn/hk/us/fund/future markets, side with quote list fetch"
readme = "README.md"
# requires-python = ">=3.6.1" # duckdb requires higher python version
requires-python = ">=3.9.0"
dependencies = [
    "build>=0.9.0",
    "httpx>=0.20.0",
    "pandas>=1.0.0",
    "setuptools>=42",
    "twine>=3.8.0",
]
[project.optional-dependencies]
persistent = ["duckdb>=0.9.0"]
