[build-system]
requires = ["setuptools>=42", "wheel", "httpx>=0.20.0", "pandas>=1.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rquote"
version = "0.5.9"
description = "Mostly day quotes of cn/hk/us/fund/future markets, side with quote list fetch"
readme = "README.md"
requires-python = ">=3.9.0"
dependencies = [
    "build>=0.9.0",
    "httpx>=0.20.0",
    "pandas>=1.0.0",
    "setuptools>=42",
    "twine>=3.8.0",
]
[project.optional-dependencies]
persistent = []  # 持久化缓存仅用标准库（sqlite/jsonl/pickle），无额外依赖
