[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rquote"
version = "0.6.2"
description = "Mostly day quotes of cn/hk/us/fund/future markets, side with quote list fetch"
readme = "README.md"
requires-python = ">=3.9.0"
dependencies = [
    "httpx>=0.20.0",
]
[project.optional-dependencies]
persistent = []  # 持久化缓存仅用标准库（sqlite/jsonl/pickle），无额外依赖
dataframe = ["pandas>=1.0.0"]
